# baremetal_microcontroller

./: .gitignore  Cargo.toml  Embed.toml  README.md  memory.x
.cargo/: config.toml
examples/: allocator.rs
microcontroller/: Cargo.toml
microcontroller/src/: color_led.rs  led.rs  lib.rs  main.rs  state.rs  user_button.rs
microcontroller/src/colors/: led.rs  mod.rs  toggle.rs
microcontroller/src/errors/: pin.rs
microcontroller/src/registers/: clock.rs  gpiod.rs  mod.rs
