[workspace]
members = ["microcontroller"]
resolver = "2"

[profile.dev]
panic = "abort"
opt-level = 1
lto = false
debug = true
codegen-units = 16

[profile.release]
panic = "abort"
opt-level = "z"
lto = true # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
codegen-units = 1 # better optimizations
