[package]
name = "microcontroller"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = { version = "0.7.3", features = ["device"] }
cortex-m = "0.7.7"
panic-semihosting = "0.6.0"
stm32f4 = { version = "0.15.1", features = ["stm32f411", "rt"] }
cortex-m-semihosting = "0.5.0"

[package.metadata.cortex-m-rt]
memory.x = true
